--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "draw.folder.structure.exclude":[
+        "**/node_modules",
+        "**/*.git",
+        "**/dist",
+        "**/*.next",
+        "**/out",
+        "**/.vercel",
+        "**/.vscode",
+        "**/android",
+        "**/ios",
+        "**/build",
+    ],
+
 }
